--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
     "@emotion/styled": "^11.11.0",
     "firebase": "^10.3.1",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "stripe": "^13.5.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   }
 }
